# mongojet

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  pyproject.toml  requirements-bench.txt  requirements-dev.txt
.github/workflows/: CI.yml  python-ci.yml  release.yml  test.yml
benchmarks/: conftest.py  test_bench.py
python/mongojet/: __init__.py  _client.py  _codec.py  _collection.py  _cursor.py  _database.py  _gridfs.py  _helpers.py  _session.py  _types.py
src/: client.rs  collection.rs  conv.rs  cursor.rs  database.rs  document.rs  error.rs  gridfs.rs  lib.rs  options.rs  result.rs  runtime.rs  session.rs
tests/: conftest.py  test_data_modification.py  test_data_querying.py  test_database.py  test_gridfs.py  test_indexes.py  test_sessions.py
