[package]
name = "mongojet"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mongojet"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.0", features = ["full", "generate-import-lib"] }
# pyo3-log={version = ">=0.13.0, <0.14" }
tokio = { version = "1.45", features = ["full"] }
futures = "0.3"

mongodb = { version = "~3.3", features = ["sync", "bson-3"] }
bson = { version = "3", features = ["chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
